Redesigned launch screen

--- a/app/src/main/res/drawable/launch_screen.xml
+++ b/app/src/main/res/drawable/launch_screen.xml
@@ -5,7 +5,7 @@
     />
     <item>
         <bitmap
-            android:src="@drawable/logopink_144dp"
+            android:src="@drawable/logopink"
             android:gravity="center"
             />
     </item>
