--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -33,6 +33,7 @@
     <SearchView
         android:id="@+id/searchView"
         android:layout_width="0dp"
+        android:queryBackground="@null"
         android:layout_height="40dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
@@ -70,6 +71,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/gray"
+            android:fontFamily="@font/rubik"
             android:text="@string/empty_shelter_title"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
