--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -8,12 +8,12 @@
         android:id="@+id/action_save"
         android:title="@string/save"
         android:icon="@drawable/ic_done"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_delete"
         android:title="Delete"
         android:visible="false"
         android:icon="@drawable/ic_delete"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 </menu>
