--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -182,6 +182,7 @@
                             android:digits="0123456789"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:text="0"
                             />
 
                     </com.google.android.material.textfield.TextInputLayout>
@@ -317,11 +318,90 @@
                             android:layout_height="match_parent"
                             />
                     </com.google.android.material.textfield.TextInputLayout>
+
                 </RelativeLayout>
+
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/container_adopted"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:text="@string/category_adopted"
+                    style="@style/CategoryStyle"
+                    />
+
+                <LinearLayout
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:orientation="vertical">
+
+                    <RadioGroup
+                        android:id="@+id/radio_group_adopted"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        >
+                        <RadioButton
+                            android:id="@+id/radio_adopt_yes"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/yes"
+                            android:onClick="onRadioButtonClicked"
+                            />
+
+                        <RadioButton
+                            android:id="@+id/radio_adopt_no"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:checked="true"
+                            android:text="@string/no"
+                            android:onClick="onRadioButtonClicked"
+
+                            />
+                    </RadioGroup>
+
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/pet_adopted_date"
+                        android:inputType="date"
+                        android:layout_width="match_parent"
+                        android:clickable="true"
+                        android:visibility="gone"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_adopted_date"
+                        app:boxStrokeColor="@color/secondary_dark"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/edit_pet_adopted_date"
+                            android:focusableInTouchMode="false"
+                            android:text="01/01/2000"
+                            android:visibility="gone"
+                            android:clickable="true"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+                </LinearLayout>
+
+
+
             </LinearLayout>
 
         </LinearLayout>
 
+
+
     </RelativeLayout>
+
+
 
 </ScrollView>
