--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,11 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <item name="android:fontFamily">@font/rubik</item>
+    </style>
+
+    <style name="Theme.Shelter.Launcher">
+        <item name="android:windowBackground">@drawable/launch_screen</item>
     </style>
 </resources>
