--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -9,7 +9,8 @@
     android:background="@drawable/item_background"
     android:layout_margin="8dp"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -97,15 +98,13 @@
 
         <ImageView
             android:id="@+id/image_adopted"
-            android:visibility="gone"
             android:layout_width="34dp"
             android:layout_height="34dp"
             android:layout_marginEnd="4dp"
-            android:src="@drawable/ic_adopted"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/name"
-            />
+            app:layout_constraintVertical_bias="0.225" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
