- Added pet age to recycler view item

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -317,7 +317,7 @@
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/edit_pet_details"
-                            android:inputType="textLongMessage|textCapSentences"
+                            android:inputType="textMultiLine"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             />
