--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Shelter" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="Theme.Shelter" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary_color</item>
         <item name="colorPrimaryVariant">@color/primary_color_dark</item>
@@ -19,5 +19,4 @@
     <style name="Theme.Shelter.Launcher">
         <item name="android:windowBackground">@drawable/launch_screen</item>
     </style>
-
 </resources>
