--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="primary_color">#9ebc9e</color>
     <color name="primary_color_dark">#6f8c70</color>
     <color name="primary_color_light">#cfefcf</color>
@@ -10,6 +10,9 @@
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
     <color name="gray">#5f5f5f</color>
+
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/primary_color</color>
+
 
 
 </resources>
