--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -2,7 +2,7 @@
 <resources>
     <!-- Editor style -->
     <style name="EditorTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="colorPrimary">@color/primary_color</item>
+        <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorAccent">@color/secondary_dark</item>
         <item name="android:fontFamily">@font/rubik</item>
