--- a/app/src/main/res/drawable/item_background.xml
+++ b/app/src/main/res/drawable/item_background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
+    <item android:state_pressed="true" android:drawable="@drawable/ripple_effect">
         <shape android:shape="rectangle">
-            <solid android:color="@color/primary_color"/>
+            <solid android:color="@color/white"/>
             <corners android:radius="16dp"/>
             <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
         </shape>
@@ -15,4 +15,5 @@
             <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
         </shape>
     </item>
+
 </selector>
