--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -7,9 +7,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activities.EditorActivity"
     android:fillViewport="true"
+    android:theme="@style/Theme.Shelter"
     >
 
-    <!-- TODO: Update form layout and colors -->
 
     <RelativeLayout
         android:id="@+id/mRelativeLayout"
