--- a/app/src/main/res/values-v29/themes.xml
+++ b/app/src/main/res/values-v29/themes.xml
@@ -1,23 +1,24 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
 
-    <!-- Base application theme. -->
     <style name="Theme.Shelter" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary_color</item>
         <item name="colorPrimaryVariant">@color/primary_color_dark</item>
         <item name="colorOnPrimary">@color/black</item>
+        <item name="android:statusBarColor">@color/primary_color_dark</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/secondary</item>
         <item name="colorSecondaryVariant">@color/secondary_dark</item>
         <item name="colorOnSecondary">@color/black</item>
-        <item name="android:statusBarColor">@color/primary_color_dark</item>
+
+        <!-- Custom Theme -->
+
         <item name="android:fontFamily">@font/rubik</item>
         <item name="android:navigationBarColor">
             @android:color/transparent
         </item>
     </style>
 
-    <style name="Theme.Shelter.Launcher">
-        <item name="android:windowBackground">@drawable/launch_screen</item>
-    </style>
+
 </resources>
