--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorAccent">@color/secondary_dark</item>
         <item name="android:fontFamily">@font/rubik</item>
         <item name="actionBarItemBackground">@android:color/white</item>
+        <item name="background">@color/greyBackground</item>
     </style>
 
     <!-- Category style -->
