--- a/app/src/main/res/drawable-night/item_background.xml
+++ b/app/src/main/res/drawable-night/item_background.xml
@@ -10,7 +10,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#404040"/>
+            <solid android:color="#FF111111"/>
             <corners android:radius="16dp"/>
             <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
         </shape>
