--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="140dp"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:padding="12dp"
     android:background="@drawable/item_background"
-    android:elevation="2dp"
+    android:elevation="4dp"
     android:layout_margin="8dp"
     android:clickable="true"
     android:focusable="true"
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="163dp" />
+            app:layout_constraintGuide_begin="150dp" />
 
         <TextView
             android:id="@+id/name"
@@ -112,11 +112,13 @@
             android:id="@+id/image_adopted"
             android:layout_width="34dp"
             android:layout_height="34dp"
-            android:layout_marginEnd="4dp"
+            android:layout_marginEnd="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.897"
+            app:layout_constraintStart_toEndOf="@+id/breed"
             app:layout_constraintTop_toBottomOf="@+id/name"
-            app:layout_constraintVertical_bias="0.225" />
+            app:layout_constraintVertical_bias="0.052" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
