--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,10 @@
     <color name="white">#ffffff</color>
     <color name="gray">#5f5f5f</color>
 
+    <color name="greyBackground">#11F3EDED</color>
+    <color name="greyText">#FFB8B0B0</color>
+    <color name="cardBgColor">#FF111111</color>
+
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/primary_color</color>
 
 </resources>
