--- a/app/src/main/res/values-v29/themes.xml
+++ b/app/src/main/res/values-v29/themes.xml
@@ -15,9 +15,8 @@
         <!-- Custom Theme -->
 
         <item name="android:fontFamily">@font/rubik</item>
-        <item name="android:navigationBarColor">
-            @android:color/transparent
-        </item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+
     </style>
 
 
