--- a/app/src/main/res/drawable-night/ripple_effect.xml
+++ b/app/src/main/res/drawable-night/ripple_effect.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/primary_color">
+    android:color="@color/secondary_dark">
     <item android:drawable="@drawable/item_bg"/>
 </ripple>
