--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryVariant">@color/primary_color_dark</item>
         <item name="colorOnPrimary">@color/black</item>
         <item name="colorSurface">@color/primary_color</item>
+        <item name="background">@color/greyBackground</item>
 
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/secondary</item>
@@ -14,8 +15,8 @@
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:fontFamily">@font/rubik</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
-        <item name="android:statusBarColor" tools:targetApi="l">@android:color/transparent</item>
-        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/primary_color_dark</item>
+
     </style>
 
     <style name="Theme.Shelter.Launcher">
